; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_vcgt_Dup.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_vcgt_Dup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._cms_typehandler_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, %struct._cms_typehandler_struct*, i8*, %struct._cms_typehandler_struct*)* @Type_vcgt_Dup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @Type_vcgt_Dup(i32 %0, %struct._cms_typehandler_struct* %1, i8* %2, %struct._cms_typehandler_struct* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct._cms_typehandler_struct*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct._cms_typehandler_struct*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32**, align 8
  store i32 %0, i32* %6, align 4
  store %struct._cms_typehandler_struct* %1, %struct._cms_typehandler_struct** %7, align 8
  store i8* %2, i8** %8, align 8
  store %struct._cms_typehandler_struct* %3, %struct._cms_typehandler_struct** %9, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = bitcast i8* %12 to i32**
  store i32** %13, i32*** %10, align 8
  %14 = load %struct._cms_typehandler_struct*, %struct._cms_typehandler_struct** %7, align 8
  %15 = call i32 @cmsUNUSED_PARAMETER(%struct._cms_typehandler_struct* %14)
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @_cmsCalloc(i32 %16, i32 3, i32 8)
  %18 = inttoptr i64 %17 to i32**
  store i32** %18, i32*** %11, align 8
  %19 = load i32**, i32*** %11, align 8
  %20 = icmp eq i32** %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  br label %46

22:                                               ; preds = %4
  %23 = load i32, i32* %6, align 4
  %24 = load i32**, i32*** %10, align 8
  %25 = getelementptr inbounds i32*, i32** %24, i64 0
  %26 = load i32*, i32** %25, align 8
  %27 = call i32* @cmsDupToneCurve(i32 %23, i32* %26)
  %28 = load i32**, i32*** %11, align 8
  %29 = getelementptr inbounds i32*, i32** %28, i64 0
  store i32* %27, i32** %29, align 8
  %30 = load i32, i32* %6, align 4
  %31 = load i32**, i32*** %10, align 8
  %32 = getelementptr inbounds i32*, i32** %31, i64 1
  %33 = load i32*, i32** %32, align 8
  %34 = call i32* @cmsDupToneCurve(i32 %30, i32* %33)
  %35 = load i32**, i32*** %11, align 8
  %36 = getelementptr inbounds i32*, i32** %35, i64 1
  store i32* %34, i32** %36, align 8
  %37 = load i32, i32* %6, align 4
  %38 = load i32**, i32*** %10, align 8
  %39 = getelementptr inbounds i32*, i32** %38, i64 2
  %40 = load i32*, i32** %39, align 8
  %41 = call i32* @cmsDupToneCurve(i32 %37, i32* %40)
  %42 = load i32**, i32*** %11, align 8
  %43 = getelementptr inbounds i32*, i32** %42, i64 2
  store i32* %41, i32** %43, align 8
  %44 = load i32**, i32*** %11, align 8
  %45 = bitcast i32** %44 to i8*
  store i8* %45, i8** %5, align 8
  br label %46

46:                                               ; preds = %22, %21
  %47 = load i8*, i8** %5, align 8
  ret i8* %47
}

declare dso_local i32 @cmsUNUSED_PARAMETER(%struct._cms_typehandler_struct*) #1

declare dso_local i64 @_cmsCalloc(i32, i32, i32) #1

declare dso_local i32* @cmsDupToneCurve(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
